--- a/WebDPRCalc/WebDPRCalc.csproj
+++ b/WebDPRCalc/WebDPRCalc.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
   </ItemGroup>
 
 
